tdf#158224 Cannot convert bitmap to polygons

regression from
    commit a76a135c9e9bdecd38970e293e72eeeeca000d27
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Jan 3 20:14:21 2023 +0200
    flatten some vcl code

Change-Id: Ibb2a059b283dc2e3bf3fecbf24ff71332a204d5d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159495
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>